--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/Annie-McElroy/social-network-api#readme",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.17.1",
     "moment": "^2.29.4",
     "mongoose": "^7.0.2"
